# Boludeces

./: .gitmodules
Autotools/Ejemplo/: Instrucciones.txt  Makefile.am  NEWS  README  configure.ac  hacer_todo.sh  limpieza.sh
Autotools/Ejemplo/src/controlador/: Makefile.am  controlador.c
Autotools/Ejemplo/src/ejemplo/: Makefile.am  principal.c
Autotools/Ejemplo/src/funciones/: Makefile.am  funciones.c
Autotools/Ejemplo/src/include/: Makefile.am  controlador.h  funciones.h
CMake/Tutorial/: .CMakeLists.txt.swp  CMakeLists.txt  tutorial.cpp
CMake/Tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp  mysqrt.h
SAL/: configure.ac  instrucciones.txt
SAL/src/: Makefile.am
SAL/src/exe/: Makefile.am  consola.c
SAL/src/lib/: Makefile.am  sal.c  sal.h
