#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libfunciones.la

#######################################
# Build information for each library

# Sources for funciones
libfunciones_la_SOURCES = funciones.c

# Linker options funcionesProgram
libfunciones_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libfunciones_la_CPPFLAGS = -I$(top_srcdir)/src/include

